[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
log = "0.4.19"

[[bin]]
name="main"
path="src/main.rs"

[[example]]
name="ex-1"
path="src/ex_1.rs"

[[example]]
name="ex-env-log"
path="src/ex_env_log.rs"

