[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1"  }
tokio-rustls = "0.24.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"
once_cell = "1.5.2"
rand = "0.8.3"
mini-redis = "0.4"
crossbeam = "0.8"
clap = { version="4.3.8", features = ["derive"] }

[[bin]]
name="main"
path="src/main.rs"

[[example]]
name="ex-1"
path="src/ex_1.rs"

[[example]]
name="ex-env-log"
path="src/ex_env_log.rs"

[[bin]]
name="waker"
path="src/waker.rs"

[[bin]]
name="waker2"
path="src/waker2.rs"

[[bin]]
name="channel"
path="src/channel.rs"